src/main/java/application/dataset/test/invalidRandomAddresses/todo/medium/RandomAddressesWithAcronyms.java
package application.dataset.test.invalidRandomAddresses.todo.medium;

public class RandomAddressesWithAcronyms {
}
